Cleaned up subfile related stuff.

--- a/background.tex
+++ b/background.tex
@@ -1,9 +1,9 @@
 
 \documentclass[thesis-solanki.tex]{subfiles}
 
-
-
-
+\ifMain
+\externaldocument{thesis-solanki}
+\fi
 \begin{document}
 
 %----------------------------------------------------------------------------
@@ -271,5 +271,19 @@ The attempts fall into two categories as follows,\eref{comma-before-list}
   integration---are discussed \dots {\color{dark-green}\footnotesize\sffamily in [specific location]}}.  
 
 \section{Chapter Recapitulation}
+
+\ifMain
+\begin{scope}
+  \nolinenumbers
+  \enotesize
+  \par
+  \begin{singlespace}
+  \setlength{\parskip}{12pt plus 2pt minus 1pt}
+  \theendnotes
+  \par
+  \end{singlespace}
+\end{scope}
+\unbcbibliography{bibliography}
+\fi
 
 \end{document}
