--- a/metasyntacticvariables.tex
+++ b/metasyntacticvariables.tex
@@ -1,5 +1,8 @@
 \documentclass[thesis-solanki.tex]{subfiles}
 
+\ifMain
+\externaldocument{thesis-solanki}
+\fi
 \begin{document}
 
 
@@ -61,5 +64,18 @@ example: \yyy{"}{``}Suppose I have a list, foo, with a node, bar, ...\yyy{"}{''}
 
 \section{Chapter Recapitulation}
 
+\ifMain
+\begin{scope}
+  \nolinenumbers
+  \enotesize
+  \par
+  \begin{singlespace}
+  \setlength{\parskip}{12pt plus 2pt minus 1pt}
+  \theendnotes
+  \par
+  \end{singlespace}
+\end{scope}
+\unbcbibliography{bibliography}
+\fi
+
 \end{document}
- 
