--- a/multiparadigm.tex
+++ b/multiparadigm.tex
@@ -1,6 +1,9 @@
 \documentclass[thesis-solanki.tex]{subfiles}
 
 
+\ifMain
+\externaldocument{thesis-solanki}
+\fi
 \begin{document}
 
 \chapter{Multi Paradigm Languages (Functional Logic Languages)}\label{chap:multiparadigm}
@@ -288,5 +291,19 @@ Unifying / Marrying / Merging / Combining Programming Paradigms / Theories
 
 
 \section{Chapter Recapitulation}
+
+\ifMain
+\begin{scope}
+  \nolinenumbers
+  \enotesize
+  \par
+  \begin{singlespace}
+  \setlength{\parskip}{12pt plus 2pt minus 1pt}
+  \theendnotes
+  \par
+  \end{singlespace}
+\end{scope}
+\unbcbibliography{bibliography}
+\fi
 
 \end{document}
