--- a/prologin.tex
+++ b/prologin.tex
@@ -1,5 +1,8 @@
 \documentclass[thesis-solanki.tex]{subfiles}
 
+\ifMain
+\externaldocument{thesis-solanki}
+\fi
 \begin{document}
 
 %-----------------------------------------------------------------------------
@@ -57,6 +60,19 @@ Prolog in \_\_\_\_\_\_
 \item ???
 \end{enumerate}
 
+\ifMain
+\begin{scope}
+  \nolinenumbers
+  \enotesize
+  \par
+  \begin{singlespace}
+  \setlength{\parskip}{12pt plus 2pt minus 1pt}
+  \theendnotes
+  \par
+  \end{singlespace}
+\end{scope}
+\unbcbibliography{bibliography}
+\fi
 
 
 \end{document}
