--- a/pwp.tex
+++ b/pwp.tex
@@ -2,6 +2,9 @@
 
 
 
+\ifMain
+\externaldocument{thesis-solanki}
+\fi
 \begin{document}
 
 % ---------------------------------------------------------------------------
@@ -170,5 +173,18 @@ The constraint in the head of a rule Identifier can only match a passive constra
 
 \section{Chapter Recapitulation}
 
+\ifMain
+\begin{scope}
+  \nolinenumbers
+  \enotesize
+  \par
+  \begin{singlespace}
+  \setlength{\parskip}{12pt plus 2pt minus 1pt}
+  \theendnotes
+  \par
+  \end{singlespace}
+\end{scope}
+\unbcbibliography{bibliography}
+\fi
 
 \end{document}
