--- a/results.tex
+++ b/results.tex
@@ -1,6 +1,9 @@
 
 \documentclass[thesis-solanki.tex]{subfiles}
 
+\ifMain
+\externaldocument{thesis-solanki}
+\fi
 \begin{document}
 \chapter{Results}\label{sect:results}
 
@@ -170,5 +173,19 @@ data Result = Ordinary ____________ --No I/O required
 
 
 \section{Chapter Recapitulation}
+
+\ifMain
+\begin{scope}
+  \nolinenumbers
+  \enotesize
+  \par
+  \begin{singlespace}
+  \setlength{\parskip}{12pt plus 2pt minus 1pt}
+  \theendnotes
+  \par
+  \end{singlespace}
+\end{scope}
+\unbcbibliography{bibliography}
+\fi
 
 \end{document}
