--- a/embedding.tex
+++ b/embedding.tex
@@ -1,6 +1,9 @@
 
 \documentclass[thesis-solanki.tex]{subfiles}
 
+\ifMain
+\externaldocument{thesis-solanki}
+\fi
 \begin{document}
 
 
@@ -370,5 +373,19 @@ As discussed in the\marginpar{{\color{red}\large *}}\endnote{%
 
 \section{Chapter Recapitulation}
 
+
+\ifMain
+\begin{scope}
+  \nolinenumbers
+  \enotesize
+  \par
+  \begin{singlespace}
+  \setlength{\parskip}{12pt plus 2pt minus 1pt}
+  \theendnotes
+  \par
+  \end{singlespace}
+\end{scope}
+\unbcbibliography{bibliography}
+\fi
 
 \end{document}
