--- a/futureScope.tex
+++ b/futureScope.tex
@@ -2,6 +2,9 @@
 
 
 
+\ifMain
+\externaldocument{thesis-solanki}
+\fi
 \begin{document}
 
 %----------------------------------------------------------------------------
@@ -53,4 +56,17 @@ data ResultWithIO typevariableforpureexpressions typevariableforioexpressions
 
 \section{Chapter Recapitulation}
 
+\ifMain
+\begin{scope}
+  \nolinenumbers
+  \enotesize
+  \par
+  \begin{singlespace}
+  \setlength{\parskip}{12pt plus 2pt minus 1pt}
+  \theendnotes
+  \par
+  \end{singlespace}
+\end{scope}
+\unbcbibliography{bibliography}
+\fi
 \end{document}
