--- a/hwh.tex
+++ b/hwh.tex
@@ -1,5 +1,8 @@
 \documentclass[thesis-solanki.tex]{subfiles}
 
+\ifMain
+\externaldocument{thesis-solanki}
+\fi
 \begin{document}
 
 % ---------------------------------------------------------------------------
@@ -99,6 +102,19 @@ This results in the ability to define infinite data structures because at execut
 
 
 
+\ifMain
+\begin{scope}
+  \nolinenumbers
+  \enotesize
+  \par
+  \begin{singlespace}
+  \setlength{\parskip}{12pt plus 2pt minus 1pt}
+  \theendnotes
+  \par
+  \end{singlespace}
+\end{scope}
+\unbcbibliography{bibliography}
+\fi
 
 
 \end{document}
