--- a/relatedtermskeywords.tex
+++ b/relatedtermskeywords.tex
@@ -2,6 +2,9 @@
 
 
 
+\ifMain
+\externaldocument{thesis-solanki}
+\fi
 \begin{document}
 
 % ---------------------------------------------------------------------------
@@ -25,5 +28,18 @@ Related Terms / Keywords
 	\item Programming Theory Unification	
 \end{enumerate}
 
+\ifMain
+\begin{scope}
+  \nolinenumbers
+  \enotesize
+  \par
+  \begin{singlespace}
+  \setlength{\parskip}{12pt plus 2pt minus 1pt}
+  \theendnotes
+  \par
+  \end{singlespace}
+\end{scope}
+\unbcbibliography{bibliography}
+\fi
 
 \end{document}
