Cleaned up subfile related stuff.

--- a/introduction.tex
+++ b/introduction.tex
@@ -2,6 +2,9 @@
 \documentclass[thesis-solanki.tex]{subfiles}
 
 
+\ifMain
+\externaldocument{thesis-solanki}
+\fi
 \begin{document}
 %----------------------------------------------------------------------------
 \chapter{Introduction}\label{chap:introduction}
@@ -261,5 +264,18 @@ Some of the indirectly related content \chapterReference{chap:relatedWork}{Chapt
 
 \section{Chapter Recapitulation}
 
+\ifMain
+\begin{scope}
+  \nolinenumbers
+  \enotesize
+  \par
+  \begin{singlespace}
+  \setlength{\parskip}{12pt plus 2pt minus 1pt}
+  \theendnotes
+  \par
+  \end{singlespace}
+\end{scope}
+\unbcbibliography{bibliography}
+\fi
 
 \end{document}
