small changes to the toDo.tex list.

--- a/toDo.tex
+++ b/toDo.tex
@@ -66,6 +66,9 @@
   Justify the use of capitals in ``Functional styles of programming''.
   Minimally, say what rules you are using.
 \item
+  \S~\ref{sec:proto1-what-we-do} contains the correct content, but needs
+  to be rewritten to flow.
+\item
   Chapter 13.5 needs fleshing out.
 
 \item
@@ -76,8 +79,7 @@
 \item
   Write enough of Chapters \ref{proto1}--\ref{proto4} that we can decide
   what material is needed in Chapters~ \ref{chap:quasiquotation},
-  \ref{chap:metasyntacticvariables},
-  and~\ref{chap:relatedtermskeywords}.
+  and~\ref{chap:metasyntacticvariables}.
 
 \item
   Rewrite (Section) Chapter 3 in formal English.
